--- a/EDBackendAPI.Entities/EDBackendAPI.Entities.csproj
+++ b/EDBackendAPI.Entities/EDBackendAPI.Entities.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EDBackendAPI.Core\EDBackendAPI.Core.csproj" />
+  </ItemGroup>
+
 </Project>
