--- a/EDBackendAPI.Business/EDBackendAPI.Business.csproj
+++ b/EDBackendAPI.Business/EDBackendAPI.Business.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EDBackendAPI.DataAccess\EDBackendAPI.DataAccess.csproj" />
+    <ProjectReference Include="..\EDBackendAPI.Entities\EDBackendAPI.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
