--- a/EDBackendAPI.Business/EDBackendAPI.Business.csproj
+++ b/EDBackendAPI.Business/EDBackendAPI.Business.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EDBackendAPI.DataAccess\EDBackendAPI.DataAccess.csproj" />
     <ProjectReference Include="..\EDBackendAPI.Entities\EDBackendAPI.Entities.csproj" />
   </ItemGroup>
