--- a/EDBackendAPI.WebAPI/EDBackendAPI.WebAPI.csproj
+++ b/EDBackendAPI.WebAPI/EDBackendAPI.WebAPI.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EDBackendAPI.Business\EDBackendAPI.Business.csproj" />
   </ItemGroup>
 
