startup.cs ve appsettings.json dosyaları düzenlendi.

--- a/EDBackendAPI.WebAPI/appsettings.json
+++ b/EDBackendAPI.WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "www.serdar.com",
+    "Issuer": "www.serdar.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysecretkey00asdasdasd23232323232323sdasd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
